--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<InvestmentBuilderWeb.Models.InvestmentRecordModel>
-
+﻿@model IEnumerable<InvestmentBuilderWeb.Models.CompanyDataModel>
 @{
     ViewBag.Title = "InvestmentRecordView";
 }
@@ -10,43 +9,69 @@
     <li><a href="@Url.Action("Performance")">Performance</a></li>
 </ul>
 
-<ul class="nav nav-tabs navbar-right">
-    <li>@Html.ActionLink("Create New", "Create")</li>
-</ul>
+    <ul class="nav nav-tabs navbar-right">
+        <li><a href="@Url.Action("Create")" class="btn btn-primary" >Create New </a></li>
+    </ul>
     <p />
 
-    <table class="table table-striped">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+    <table class="table table-striped table-condensed">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.EditorFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", item)
-                </td>
+                <th>Name</th>
+                <th>Quantity</th>
+                <th>Last Brought</th>
+                <th>Avg.Price Paid</th>
+                <th>Total Cost</th>
+                <th>Current Price</th>
+                <th>Net Value</th>
+                <th>Profit/Loss</th>
+                <th>Month Change%</th>
             </tr>
-        }
+        </thead>
 
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Quantity)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastBrought)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AveragePricePaid)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TotalCost)
+                    </td>
+                    <td>
+                        @using (Html.BeginForm("UpdatePrice", "InvestmentRecord", FormMethod.Get, new { id = "indexItem" }))
+                        {
+                            <input type="hidden" name="investment" value="@item.Name" />
+                            <input name="share_price" value=@item.SharePrice 
+                                   onchange="javascript:document.getElementById('indexItem').submit()" />
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NetSellingValue)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProfitLoss)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MonthChangeRatio)
+                    </td>
+                    <td>
+                        <ul class="nav nav-tabs">
+                            <li><a href="@Url.Action("Edit", "InvestmentRecord", item )" class="btn btn-sm">Edit</a></li>
+                            <li><a href="@Url.Action("Delete", "InvestmentRecord", item)" class="btn btn-sm">Delete</a></li>
+                        </ul>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
