Refactored MarketServiceData, added Broker handling
Removed scalingFactor. More data retrieved fromMarket Data sources.
Added broker handling for calculating NetSelling values

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
@@ -12,13 +12,14 @@
 
 <div class="panel panel-default"> 
     <div class="panel-heading">
-        <h3 class="panel-title">Panel title</h3>
-    </div>
-    <div class="panel-body">
-        Receipts 
-    </div> 
+        <div class="container">
+            <div class="row">
+                <h4>Receipts</h4>
+                <a class="btn btn-default pull-right">Add Receipt</a>
+            </div>
+        </div>
+                </div>
     <table class="table table-condensed">
-        <th>Product</th><th>Price </th>
         <tr>
            <td>Product A</td>
            <td>200</td>
@@ -30,9 +31,8 @@
     </table>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading">Panel Heading</div>
+    <div class="panel-heading">Payments</div>
     <table class="table table-condensed">
-        <th>Product</th><th>Price </th>
         <tr>
            <td>Product A</td>
            <td>200</td></tr>
