--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -6,7 +6,7 @@
 <ul class="nav nav-tabs nav-justified">
     <li><a href="@Url.Action("index")">Portfolio</a></li>
     <li><a href="@Url.Action("CashFlow")">CashFlow</a></li>
-    <li><a href="@Url.Action("Performance")">Performance</a></li>
+    <li><a href="@Url.Action("Reports")">Reports</a></li>
 </ul>
 
     <ul class="nav nav-tabs navbar-right">
