--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Reports.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Reports.cshtml
@@ -1,4 +1,4 @@
-﻿@model InvestmentBuilderWeb.Models.PerformanceModel
+﻿@model InvestmentBuilderWeb.Models.ReportsModel
 @{
     ViewBag.Title = "Performance";
 }
@@ -6,7 +6,7 @@
 <ul class="nav nav-tabs nav-justified">
     <li><a href="@Url.Action("index")">Portfolio</a></li>
     <li><a href="@Url.Action("CashFlow")">CashFlow</a></li>
-    <li><a href="@Url.Action("Performance")">Performance</a></li>
+    <li><a href="@Url.Action("Reports")">Reports</a></li>
 </ul>
 
 <ul>
