--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
@@ -2,7 +2,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<div class="editor">
+<div class="editor addTransaction">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -37,5 +37,5 @@
         <div class="form-group">
             <input type="submit" value="Add" class="form-control" />
         </div>
-        }
-    </div>
+       }
+</div>
