--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Itinerary/Create.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Itinerary/Create.cshtml
@@ -10,7 +10,7 @@
 
 <button id="helpTrigger" class="helpTrigger"></button>
 
-<button id="helpContent" style="display:none"></button>
+<div id="helpContent" style="display:none"></div>
 
 <div class="editor">
     @using (Html.BeginForm())
