--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -8,10 +8,17 @@
     <li><a href="@Url.Action("CashFlow")">CashFlow</a></li>
     <li><a href="@Url.Action("Reports")">Reports</a></li>
 </ul>
-
-    <ul class="nav nav-tabs navbar-right">
-        <li><a href="@Url.Action("Create")" class="btn btn-primary" >Create New </a></li>
-    </ul>
+    <nav class="navbar navbar-default">
+        <div class="navbar-header">
+            <a class="navbar-brand">Unit Price</a>
+        </div>
+        <div>
+            <p class="navbar-text">@ViewBag.SummaryData.ValuePerUnit</p>
+        </div>
+        <ul class="nav nav-tabs navbar-right">
+            <li><a href="@Url.Action("Create")" class="btn btn-primary">Create New </a></li>
+        </ul>
+    </nav>
     <p />
 
     <table class="table table-striped table-condensed">
