--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
@@ -1,8 +1,10 @@
 ﻿@model InvestmentBuilderWeb.Models.TransactionModel
 
+<button type="button" class="close" aria-hidden="true" onclick="onCloseTransaction">&times</button>
+
 <h2>@ViewBag.Title</h2>
 
-<div class="editor addTransaction">
+<div class="editor">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -11,10 +13,13 @@
 
         <div class="form-group">
             @Html.LabelFor(m => m.TransactionDate)
-            @Html.EditorFor(m => m.TransactionDate, new { @class = "form-control" })
+            @Html.EditorFor(m => m.TransactionDate, new { @class = "form-control datetime",
+                                                          onclick = "javascript:onSelectDateTimeEdit"
+       })
         </div>
 
         <div class="form-group">
+            <label>Transaction Type</label>
             @Html.DropDownList("ParameterType", null, new
            {
                @class = "form-control",
@@ -35,7 +40,9 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Add" class="form-control" />
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close </button>
+            <input type="submit" value="Submit Changes" class="btn btn-primary" />
         </div>
-       }
-</div>
+    }
+
+ </div>
