--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,3 +1,3 @@
 ﻿@model System.DateTime?
-@Html.TextBox("", (Model.HasValue ? Model.Value.ToShortDateString() : string.Empty),
+@Html.TextBox("", (Model.HasValue ? Model.Value.ToShortDateString() : DateTime.Today.ToShortDateString()),
                 new { @class="datetime"})
