added code contracts. improvements to web app

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
@@ -1,4 +1,12 @@
-﻿<div class="row investmentSummary">
+﻿
+<ul class="nav nav-tabs nav-justified">
+    <li><a href="@Url.Action("index")">Portfolio</a></li>
+    <li><a href="@Url.Action("CreateTrade")">Add</a></li>
+    <li><a href="@Url.Action("CashFlow")">CashFlow</a></li>
+    <li><a href="@Url.Action("Reports")">Reports</a></li>
+</ul>
+
+<div class="row investmentSummary">
     <div class="pull-left">
         <ul class="list-inline">
             <li>
