--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddModalDialog.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddModalDialog.cshtml
@@ -6,8 +6,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
             </div>
-            <div id="transactionContents" class="modal-body"> 
-                Receipt Body Here
+            <div id="dialogContents" class="modal-body"> 
             </div> 
             <div class="modal-footer"> 
             </div>
