--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
@@ -1,8 +1,6 @@
 ﻿@model InvestmentBuilderWeb.Models.TransactionModel
 
-<button type="button" class="close" aria-hidden="true" onclick="onCloseTransaction">&times</button>
-
-<h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Title</h3>
 
 <div class="editor">
     @using (Html.BeginForm())
@@ -13,9 +11,7 @@
 
         <div class="form-group">
             @Html.LabelFor(m => m.TransactionDate)
-            @Html.EditorFor(m => m.TransactionDate, new { @class = "form-control datetime",
-                                                          onclick = "javascript:onSelectDateTimeEdit"
-       })
+            @Html.EditorFor(m => m.TransactionDate, new { @class = "form-control datetime" })
         </div>
 
         <div class="form-group">
@@ -28,9 +24,9 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(m => m.Parameter)
             <div id="parameters">
-                @Html.LabelFor(m => m.Parameter)
-                @Html.DropDownList("DummyParameters", null, new { @class= "form-control"})
+                @Html.DropDownList("DummyParameters", null, new { @class = "form-control" })
             </div>
         </div>
 
